--- a/Bachelorarbeit/introduction.tex
+++ b/Bachelorarbeit/introduction.tex
@@ -7,7 +7,9 @@
 
 \section{Motivation}
 \label{sec:motivation}
-Im Rahmen des Forschungsprojektes AEROMET\_UAV wird nach Alternativen für den Einsatz von Wetterballons zur Atmosphärenmessung geforscht. Wetterballons liefern seither wichtige Messdaten im Bereich der Wetter- und Klimamessung. Allerdings sind die Ballons den Umgebungseinflüssen wie Wind und Temperatur ausgesetzt. Die empfindlichen Außenhülle des Ballons erweist sich zudem als sehr anfällig gegenüber kleinen Beschädigungen, die ein vorzeitiges Platzen des Ballons verursachen können \textcolor{red}{Quellen anbringen}. Daher muss immer mit einer Abdrift und einem möglichen Fehlschlag der Mission gerechnet werden. Nicht zuletzt ist diese Art der Wetter- und Klimamessung wenig nachhaltig, da der Ballon bei jedem Einsatz unwiederbringlich zerstört wird. Dies erzeugt viele Kleinteile, die schwer wiederzufinden sind und somit eine Umweltbelastung darstellen. Ein weiterer Kostenfaktor entsteht durch den Verlust der zum Aufstieg benötigten Gase wie Wasserstoff oder Helium.\\ \todo[inline]{Wie hoch können Ballone fliegen und warum ist das für den Anschluss wichtig}
+Im Rahmen des Forschungsprojektes AEROMET\_UAV wird nach Alternativen für den Einsatz von Wetterballons zur Atmosphärenmessung geforscht. Wetterballons liefern seither wichtige Messdaten im Bereich der Wetter- und Klimamessung. Allerdings sind die Ballons den Umgebungseinflüssen wie Wind und Temperatur ausgesetzt. Die empfindlichen Außenhülle des Ballons erweist sich zudem als sehr anfällig gegenüber kleinen Beschädigungen, die ein vorzeitiges Platzen des Ballons verursachen können \textcolor{red}{Quellen anbringen}. Daher muss immer mit einer Abdrift und einem möglichen Fehlschlag der Mission gerechnet werden. Nicht zuletzt ist diese Art der Wetter- und Klimamessung wenig nachhaltig, da der Ballon bei jedem Einsatz unwiederbringlich zerstört wird. Dies erzeugt viele Kleinteile, die schwer wiederzufinden sind und somit eine Umweltbelastung darstellen. Ein weiterer Kostenfaktor entsteht durch den Verlust der zum Aufstieg benötigten Gase wie Wasserstoff oder Helium. Dies stellt nicht nur einen Kosten- sondern auch einen Risikofaktor dar. Der deutsche Wetterdienst (DWD) benutzt für seine Ballone Wasserstoff. Reste dieses Gases können sich noch in Ballonhülle befinden und bei einer unachtsamen Bergung der Radiosonde zu einer Entzündung führen.
+Die Höhe, die ein Wetterballon erreichen kann, liegt im Regelfall zwischen \SI{20}{} und \SI{30}{km}. 
+\\ \todo[inline]{Quelle DWD}
 Als eine erfolgversprechende Alternative erweisen sich sogenannte Unmanned Airial Vehicle (UAV). Der Vorteil der UAV's liegt vor allem in ihrer Robustheit, der Steuerbarkeit und der einfachen Bedienung. Im März des Jahres 2018 veröffentlichte Denis Koriakin ein Video \cite{Anderson.2018},in dem er einen Steigflug eines \SI{1}{kg} schweren Quadrocopters auf eine Höhe von \SI{10}{km} zeigt. 
 
 
